--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-loading": "^2.0.3",
     "react-lottie": "^1.2.3",
     "react-scripts": "5.0.1",
+    "react-typical": "^0.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
