--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
     "react-typical": "^0.1.3",
+    "react-use-scroll-snap": "^0.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
