--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://GIHAA.github.io/portfolio-repo",
+  "homepage": "https://GIHAA.github.io/portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
